feat: 참가자가 게임에 존재하는 지 확인할 수 있음